--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,5 +7,6 @@
 </head>
 <body>
   <header class="header">
-      <h1 class='site-title'>Facespace</h1>
+      <h1 class='site-title'><a href="/">Facespace</a></h1>
+      <a href="/signin"><button class='signin-button'><%= greeting %> </button></a>
   </header>
