--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -1,1 +1,16 @@
-<!-- ... -->
+<%- include('../partials/header') %> 
+<div class='homepage'></div>
+<h2>All Facespace members</h2>
+<ul class='homepage__all'>
+    <% users.forEach( user => { %> 
+        <li class='homepage__all--user'>
+            <a href="/users/<%= user._id %> ">
+                <img src="<%= user.avatarUrl %> " alt="<%= user.name %>'s avatar">
+                <% if (friendIds && (friendIds.includes(user._id))) { %> 
+                    <p class='ribbon'><span>Friend</span></p>
+                <% }; %> 
+            </a>
+        </li>
+    <% }); %> 
+</ul>
+<%- include('../partials/footer') %> 
